hphp/hack/test/typecheck/covariant_this_type.php.like_types.exp
File "covariant_this_type.php", line 8, characters 7-11:
Invalid argument (Typing[4110])
File "covariant_this_type.php", line 6, characters 31-34:
Expected ~I<[unresolved]> because it is an unenforceable type
File "covariant_this_type.php", line 7, characters 18-18:
But got D
